/* eslint-disable no-template-curly-in-string */
import outdent from 'outdent';
import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		// A binding with the same name that is not an `fs` import is not Node's `fs`
		'import {readFileSync} from "other";\nJSON.parse(readFileSync(file));',
		'function readFileSync() {}\nJSON.parse(readFileSync(file));',
		'import {readFile} from "node:fs/promises";\nfunction parse(readFile) {\n\treturn JSON.parse(readFile(file));\n}',
		'import {existsSync} from "node:fs";\nJSON.parse(existsSync(file));',
		'JSON.parse(await fs.readFile(file, "utf8"));',
		'JSON.parse(await fs.readFile(file, "utf8",));',
		'JSON.parse(await fs.readFile(file, "UTF-8"));',
		'JSON.parse(await fs.readFileSync(file, "utf8"));',
		'JSON.parse(fs.readFileSync(file, "utf8"));',
		'const CHARSET = "UTF8"; JSON.parse(await fs.readFile(file, CHARSET));',
		'const EIGHT = 8; JSON.parse(await fs.readFile(file, `utf${EIGHT}`));',
		'JSON.parse(await fs["readFile"](file, "utf8"));',
		'JSON.parse(await fs.readFile(file, {encoding: "utf8"}));',
		'JSON.parse(await fs.readFile(file, "gbk"));',
		'JSON.parse(await fs.readFile(file, unknown));',
		'JSON.parse(await fs.readFile(...file));',
		'JSON.parse(await fs.readFile(file, 0));',
		'JSON.parse(await fs.readFile(file, "utf8", extraArgument));',
		'JSON.parse(await fs.readFile?.(file));',
		'JSON.parse(await fs?.readFile(file));',
		'JSON.parse(await fs.notReadFileMethod(file));',
		'JSON.parse?.(await fs.readFile(file));',
		'JSON?.parse(await fs.readFile(file));',
		'window.JSON.parse(await fs.readFile(file));',
		'JSON.stringify(await fs.readFile(file));',
		'NOT_JSON.parse(await fs.readFile(file));',
		'for (const string of []) JSON.parse(string);',
		'JSON.parse(await fs.readFile(file), extraArgument);',
		'JSON.parse(foo);',
		'JSON.parse();',
		'JSON.parse(await fs.readFile(file, {encoding: "not-utf8"}));',
		'JSON.parse(await fs.readFile(file, {flag: "r"}));',
		'JSON.parse(await fs.readFile(file, {encoding: null, flag: "r"}));',
		'JSON.parse(await fs.readFile(file, {encoding: "utf8", extraProperty: "utf8"}));',
		'const options = {}; Object.defineProperty(options); JSON.parse(await fs.readFile(file, options));',
		`const options = {encoding: null};
Object.defineProperty(options, 'encoding', {get() { return 'utf8'; }});
JSON.parse(await fs.readFile(file, options));`,
		`const options = {encoding: null};
Object.defineProperties(options, {encoding: {get() { return 'utf8'; }}});
JSON.parse(await fs.readFile(file, options));`,
		`const options = {encoding: null};
const alias = options;
Object.defineProperty(alias, 'encoding', {get() { return 'utf8'; }});
JSON.parse(await fs.readFile(file, options));`,
		`const options = {encoding: null};
const alias = options;
const secondAlias = alias;
Object.defineProperties(secondAlias, {encoding: {get() { return 'utf8'; }}});
JSON.parse(await fs.readFile(file, options));`,
		`const key = 'encoding';
const descriptorKey = 'get';
const options = {encoding: null};
Object.defineProperties(options, {[key]: {[descriptorKey]() { return 'utf8'; }}});
JSON.parse(await fs.readFile(file, options));`,
		`const options = {encoding: null};
Object.defineProperty(options, 'encoding', {['get']() { return 'utf8'; }});
JSON.parse(await fs.readFile(file, options));`,
		outdent`
			const options = {encoding: null};
			Object.defineProperty(options, 'encoding', {set() {}});
			JSON.parse(await fs.readFile(file, options));
		`,
		'JSON.parse(await fs.readFile(file, {...encoding}));',
		'JSON.parse(await fs.readFile(file, {encoding: unknown}));',
		'const readingOptions = {flag: "r"};JSON.parse(await fs.readFile(file, readingOptions));',
		'const readingOptions = {encoding: null, flag: "r"};JSON.parse(await fs.readFile(file, readingOptions));',
		'const encoding = "gbk";JSON.parse(await fs.readFile(file, {encoding: encoding}));',
		'const readingOptions = {encoding: "utf8", extraProperty: undefined};JSON.parse(await fs.readFile(file, readingOptions));',
		outdent`
			const {string} = await fs.readFile(file);
			JSON.parse(string);
		`,
		outdent`
			const string = fs.readFile(file, () => {});
			JSON.parse(string);
		`,
		outdent`
			const abortController = new AbortController();
			const {signal} = abortController;
			const promise = fs.readFile(file, {encoding: "utf8", signal});
			if (foo) {
				JSON.parse(await promise);
			} else {
				abortController.abort();
			}
		`,
		outdent`
			const string = await fs.readFile(file, "utf8");
			console.log(string);
			JSON.parse(string);
		`,
		outdent`
			const string = await fs.readFile(file);
			JSON.parse(\`[\${string}]\`);
		`,
		outdent`
			const foo = {};
			foo.bar = await fs.readFile(file);
			JSON.parse(foo.bar);
		`,
		outdent`
			const foo = await fs.readFile(file);
			const bar = await foo;
			console.log(baz);
			const baz = await bar;
			JSON.parse(baz);
		`,
		outdent`
			const foo = fs.readFile(file);
			function fn1() {
				const foo = "{}";
				JSON.parse(foo);
			}
		`,
		// An undeclared function is not a known `fs` import
		'JSON.parse(readFileSync(file));',
	],
	invalid: [
		// A named import is the same call
		'import {readFileSync} from "node:fs";\nJSON.parse(readFileSync(file));',
		'import {readFile} from "node:fs/promises";\nJSON.parse(await readFile(file));',
		'import {readFile} from "fs";\nJSON.parse(await readFile(file));',
		'import { readFileSync as read } from "node:fs";\nJSON.parse(read(file));',
		'JSON.parse(await fs.readFile(file));',
		'JSON.parse(await fs.readFile(file,));',
		// A parenthesized argument must not turn into a sequence expression
		'JSON.parse(await fs.readFile((file)));',
		'JSON.parse(await fs.readFile(((file))));',
		'JSON.parse(await fs.readFile(file, null));',
		'JSON.parse(await fs.readFile(file, undefined));',
		'JSON.parse(await fs.readFile(file, {encoding: null}));',
		'JSON.parse(await fs.readFile(file, {encoding: undefined}));',
		'const readingOptions = {encoding: null};JSON.parse(await fs.readFile(file, readingOptions));',
		'JSON.parse(await fs.readFileSync(file));',
		'JSON.parse(fs.readFileSync(file));',
		outdent`
			const buffer = await fs.readFile(file);
			JSON.parse(buffer);
		`,
		outdent`
			let buffer = await fs.readFile(file);
			JSON.parse(buffer);
		`,
		outdent`
			const foo = await await fs.readFile(file);
			const bar = await await foo;
			const baz = await bar;
			JSON.parse(baz);
		`,
		outdent`
			var foo = await fs.readFile(file);
			let bar = await foo;
			const baz = await bar;
			JSON.parse(baz);
		`,
		outdent`
			const foo = fs.readFile(file);
			async function fn1() {
				const bar = await foo;

				function fn2() {
					const baz = bar;
					JSON.parse(baz);
				}
			}
		`,
		outdent`
			const readingOptions = {encoding: null};
			const buffer = fs.readFile(file, readingOptions);
			function parse() {
				const readingOptions = {encoding: "utf8"};
				JSON.parse(buffer);
			}
		`,
		outdent`
			const options = {encoding: null};
			const buffer = fs.readFile(file, options);
			Object.defineProperty(options, 'other', {set() {}});
			JSON.parse(buffer);
		`,
		outdent`
			const buffer = fs.readFile(file); /* Should report */
			const foo = buffer;
			async function fn1() {
				const buffer = fs.readFile(file); /* Should NOT report */
				JSON.parse(await foo);
			}
		`,
		outdent`
			const buffer = fs.readFile(file); /* Should report */
			const foo = buffer;
			async function fn1() {
				const buffer = fs.readFile(file); /* Should NOT report */
				const baz = foo;
				for (;;) {
					const buffer = fs.readFile(file); /* Should NOT report */
					JSON.parse(await baz);
				}
			}
		`,
		outdent`
			const foo = fs.readFile(file);
			function fn1() {
				JSON.parse(foo);

				function fn2() {
					const foo = "{}";
				}
			}
		`,
		// Maybe false positive, we can trace the callee if necessary
		outdent`
			const buffer = await NOT_A_FS_MODULE.readFile(file);
			JSON.parse(buffer);
		`,
		// The options object is replaced by a literal, a comment inside it would be lost
		'JSON.parse(await fs.readFile(file, {/* keep */ encoding: null}));',
	],
});

const buffer = testCase => ({
	...testCase,
	options: ['buffer'],
});

const bufferCode = code => buffer({code});

test.snapshot({
	valid: [
		'JSON.parse(await fs.readFile(file));',
		'JSON.parse(await fs.readFileSync(file));',
		'JSON.parse(fs.readFileSync(file));',
		'JSON.parse(await fs.readFile(file, "buffer"));',
		'JSON.parse(await fs.readFile(file, "gbk"));',
		'JSON.parse(await fs.readFile(file, ));',
		'JSON.parse(await fs.readFile(file, null));',
		'JSON.parse(await fs.readFile(file, {encoding: null}));',
		'JSON.parse(await fs.readFile(file, unknown));',
		'JSON.parse(await fs.readFile(...file, "utf8"));',
		'JSON.parse(await fs.readFile(file, ..."utf8"));',
		'JSON.parse(await fs.readFile(file, 0));',
		'JSON.parse(await fs.readFile(file, "utf8", extraArgument));',
		'JSON.parse(await fs.readFile?.(file, "utf8"));',
		'JSON.parse(await fs?.readFile(file, "utf8"));',
		'JSON.parse(await fs.notReadFileMethod(file, "utf8"));',
		'JSON.parse?.(await fs.readFile(file, "utf8"));',
		'JSON?.parse(await fs.readFile(file, "utf8"));',
		'window.JSON.parse(await fs.readFile(file, "utf8"));',
		'JSON.stringify(await fs.readFile(file, "utf8"));',
		'NOT_JSON.parse(await fs.readFile(file, "utf8"));',
		'for (const string of []) JSON.parse(string);',
		'JSON.parse(await fs.readFile(file, "utf8"), extraArgument);',
		'JSON.parse(foo);',
		'JSON.parse();',
		'JSON.parse(await fs.readFile(file, {encoding: "not-utf8"}));',
		'JSON.parse(await fs.readFile(file, {encoding: "utf8", extraProperty: "utf8"}));',
		'JSON.parse(await fs.readFile(file, {...encoding}));',
		'JSON.parse(await fs.readFile(file, {encoding: unknown}));',
		'const readingOptions = {encoding: "utf8", flag: "r"};JSON.parse(await fs.readFile(file, readingOptions));',
		'const encoding = "gbk";JSON.parse(await fs.readFile(file, {encoding: encoding}));',
		'const readingOptions = {encoding: "utf8", extraProperty: undefined};JSON.parse(await fs.readFile(file, readingOptions));',
		outdent`
			const {string} = await fs.readFile(file, "utf8");
			JSON.parse(string);
		`,
		outdent`
			const string = fs.readFile(file, () => {});
			JSON.parse(string);
		`,
		outdent`
			const abortController = new AbortController();
			const {signal} = abortController;
			const promise = fs.readFile(file, {encoding: "utf8", signal});
			if (foo) {
				JSON.parse(await promise);
			} else {
				abortController.abort();
			}
		`,
		outdent`
			const string = await fs.readFile(file, "utf8");
			console.log(string);
			JSON.parse(string);
		`,
		outdent`
			const string = await fs.readFile(file, "utf8");
			JSON.parse(\`[\${string}]\`);
		`,
		outdent`
			const foo = {};
			foo.bar = await fs.readFile(file, "utf8");
			JSON.parse(foo.bar);
		`,
		outdent`
			const foo = await fs.readFile(file, "utf8");
			const bar = await foo;
			console.log(baz);
			const baz = await bar;
			JSON.parse(baz);
		`,
		outdent`
			const foo = fs.readFile(file, "utf8");
			function fn1() {
				const foo = "{}";
				JSON.parse(foo);
			}
		`,
		outdent`
			const options = {encoding: 'utf8'};
			Object.defineProperty(options, 'encoding', {...descriptor, get() { return 'utf8'; }});
			JSON.parse(await fs.readFile(file, options));
		`,
	].map(code => bufferCode(code)),
	invalid: [
		'JSON.parse(await fs.readFile(file, "utf8"));',
		'JSON.parse(await fs.readFile(file, "utf8",));',
		'JSON.parse(await fs.readFile(file, "UTF-8"));',
		'JSON.parse(await fs.readFileSync(file, "utf8"));',
		'JSON.parse(fs.readFileSync(file, "utf8"));',
		'const CHARSET = "UTF8"; JSON.parse(await fs.readFile(file, CHARSET));',
		'const EIGHT = 8; JSON.parse(await fs.readFile(file, `utf${EIGHT}`));',
		'JSON.parse(await fs["readFile"](file, "utf8"));',
		'JSON.parse(await fs.readFile(file, {encoding: "utf8"}));',
		'const EIGHT = 8; JSON.parse(await fs.readFile(file, {encoding: `utf${EIGHT}`}));',
		'JSON.parse(await fs.readFile(file, {...({encoding: "utf8"})}));',
		'const encoding = "utf8";JSON.parse(await fs.readFile(file, {encoding}));',
		'const CHARSET = "utF-8", readingOptions = {encoding: CHARSET}; JSON.parse(await fs.readFile(file, readingOptions));',
		'const EIGHT = 8, ENCODING = "encoding"; JSON.parse(await fs.readFile(file, {[ENCODING]: `utf${EIGHT}`}));',
		outdent`
			const string = await fs.readFile(file, "utf8");
			JSON.parse(string);
		`,
		outdent`
			const encoding = "utf8";
			const string = fs.readFile(file, encoding);
			function parse() {
				const encoding = undefined;
				JSON.parse(string);
			}
		`,
		outdent`
			let string = await fs.readFile(file, "utf8");
			JSON.parse(string);
		`,
		outdent`
			const foo = await await fs.readFile(file, "utf8");
			const bar = await await foo;
			const baz = await bar;
			JSON.parse(baz);
		`,
		outdent`
			var foo = await fs.readFile(file, "utf8");
			let bar = await foo;
			const baz = await bar;
			JSON.parse(baz);
		`,
		outdent`
			const foo = fs.readFile(file, "utf8");
			async function fn1() {
				const bar = await foo;

				function fn2() {
					const baz = bar;
					JSON.parse(baz);
				}
			}
		`,
		outdent`
			const buffer = fs.readFile(file, "utf8"); /* Should report */
			const foo = buffer;
			async function fn1() {
				const buffer = fs.readFile(file, "utf8"); /* Should NOT report */
				JSON.parse(await foo);
			}
		`,
		outdent`
			const buffer = fs.readFile(file, "utf8"); /* Should report */
			const foo = buffer;
			async function fn1() {
				const buffer = fs.readFile(file, "utf8"); /* Should NOT report */
				const baz = foo;
				for (;;) {
					const buffer = fs.readFile(file, "utf8"); /* Should NOT report */
					JSON.parse(await baz);
				}
			}
		`,
		outdent`
			const foo = fs.readFile(file, "utf8");
			function fn1() {
				JSON.parse(foo);

				function fn2() {
					const foo = "{}";
				}
			}
		`,
		// Maybe false positive, we can trace the callee if necessary
		outdent`
			const string = await NOT_A_FS_MODULE.readFile(file, "utf8");
			JSON.parse(string);
		`,
		'import {readFileSync} from "node:fs";\nJSON.parse(readFileSync(file, "utf8"));',
	].map(code => bufferCode(code)),
});
